blog service uses lazy post index